käyttäjän tietojen päivittämistä ja niiden näyttäminen muille käyttäjille

--- a/testejä/lisaa.html
+++ b/testejä/lisaa.html
@@ -9,7 +9,8 @@
       <p>nimi: <br> <input type="text" name="nimi"></p>
       <p>kiinnitys: <br> <input type="text" name="kiinnitys"></p>
       <p>palvelut: <br> <input type="text" name="palvelut"></p>
-      <p>karttasivu: <br> <input type="integer" name="karttasivu"></p>   
+      <p>karttasivu: <br> <input type="integer" name="karttasivu"></p>
+      <p>www-sivu: <br> <input type="text" name="kotisivu"></p>   
 
       <p><input type="submit" value="Lisää"></p>
     </form>
